# PromptTool

./: package-lock.json  package.json  tsconfig.json  vite.config.ts
prompts/: default.toml
src/: App.svelte  SearchBar.svelte  SettingsModal.svelte  index.html  index.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: default.toml
src-tauri/src/: database.rs  error.rs  file_io.rs  lib.rs  main.rs  prompt.rs
src-tauri/tests/: database_tests.rs
